--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3auth/ethereum-mpc-provider": "^8.4.0",
     "@web3auth/mpc-core-kit": "^2.3.0",
     "@web3auth/single-factor-auth": "^7.4.0",
+    "axios": "^1.7.2",
     "core-js": "^3.26.1",
     "firebase": "^10.11.1",
     "vue": "^3.3.4",
